--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Attach Nodemon",
+            "name": "Node: nodemon",
             "request": "attach",
-            "port": 3000,
-            "address": "localhost",
+            "type": "node",
+            "processId": "${command:PickProcess}",
             "restart": true,
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node"
+            "protocol": "inspector",
+            "preLaunchTask": "npm: debug"
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "console": "integratedTerminal",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "skipFiles": ["<node_internals>/**"],
             "env": {
                 "PORT": "80"
             },
