Ajout des masses et des puissances

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,7 @@
             "type": "node",
             "processId": "${command:PickProcess}",
             "restart": true,
-            "protocol": "inspector",
-            "preLaunchTask": "npm: debug"
+            "protocol": "inspector"
         },
         {
             "type": "node",
