--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     },
     "rules": {
         "semi": "off",
-        "prettier/prettier": "error"
+        "prettier/prettier": "warn"
     },
     "plugins": ["prettier"]
 }
