--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "tabWidth": 4,
     "useTabs": false,
-    "endOfLine": "crlf"
+    "endOfLine": "crlf",
+    "trailingComma": "es5"
 }
