--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pm2": "^4.5.2"
     },
     "devDependencies": {
         "eslint": "^7.18.0",
