--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "@pm2/io": "^4.3.5",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
-        "express": "^4.17.1",
-        "pm2": "^4.5.2"
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "eslint": "^7.18.0",
