Revert "Ajout de mesures pour PM2/IO"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
     },
     "rules": {
         "semi": "off",
-        "prettier/prettier": "warn",
-        ""
+        "prettier/prettier": "warn"
     },
     "plugins": ["prettier"]
 }
