Ajout de la version sur base de la date/heure/commit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "prod": "node -r dotenv/config server.js",
-        "dev": "nodemon -r dotenv/config --inspect server.js"
+        "dev": "nodemon -r dotenv/config --inspect server.js *.ejs .env"
     },
     "author": "MARCHAL Paul",
     "license": "ISC",
@@ -16,7 +16,8 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "git-commit-info": "^2.0.0"
     },
     "devDependencies": {
         "eslint": "^7.18.0",
