Modification CSS -> SCSS pour pllus de modularité

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "url": "https://github.com/lamarch/convertisseurs-site.git"
     },
     "scripts": {
-        "prod": "node -r dotenv/config server.js",
-        "dev": "nodemon -r dotenv/config --inspect server.js *.ejs .env"
+        "prod": "sass ./styles:./public/styles/ && node -r dotenv/config server.js",
+        "dev": "sass ./styles:./public/styles/ && nodemon -r dotenv/config --inspect server.js *.ejs .env"
     },
     "author": "MARCHAL Paul",
     "license": "ISC",
@@ -17,7 +17,8 @@
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
-        "git-commit-info": "^2.0.0"
+        "git-commit-info": "^2.0.0",
+        "sass": "^1.32.6"
     },
     "devDependencies": {
         "eslint": "^7.18.0",
